--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -36,7 +36,12 @@
 #
 # startpage (List of String):
 #     The default page(s) to open at the start, separated by commas.
-#     Default: https://duckduckgo.com
+#     Default: https://start.duckduckgo.com
+#
+# yank-ignored-url-parameters (List of String):
+#     The URL parameters to strip with :yank url, separated by commas.
+#     Default:
+#     ref,utm_source,utm_medium,utm_campaign,utm_term,utm_content
 #
 # default-page (FuzzyUrl):
 #     The page to open if :open -t/-b/-w is used without URL. Use
@@ -80,7 +85,8 @@
 # developer-extras (Bool):
 #     Enable extra tools for Web developers.
 #     This needs to be enabled for `:inspector` to work and also adds an
-#     _Inspect_ entry to the context menu.
+#     _Inspect_ entry to the context menu. For QtWebEngine, see
+#     'qutebrowser --help' instead.
 #     Valid values: true, false
 #     Default: false
 #
@@ -160,6 +166,7 @@
 #     Default: path,query
 ignore-case = smart
 startpage = about:blank
+yank-ignored-url-parameters = ref,utm_source,utm_medium,utm_campaign,utm_term,utm_content
 default-page = ${startpage}
 auto-search = naive
 auto-save-config = true
@@ -231,11 +238,15 @@ url-incdec-segments = path,query
 #     Valid values: true, false
 #     Default: false
 #
-# user-stylesheet (UserStyleSheet):
-#     User stylesheet to use (absolute filename, filename relative to
-#     the config directory or CSS string). Will expand environment
-#     variables.
-#     Default: html > ::-webkit-scrollbar { width: 0px; height: 0px; }
+# user-stylesheet (File):
+#     User stylesheet to use (absolute filename or filename relative to
+#     the config directory). Will expand environment variables.
+#     Default:
+#
+# hide-scrollbar (Bool):
+#     Hide the main scrollbar.
+#     Valid values: true, false
+#     Default: true
 #
 # css-media-type (String):
 #     Set the CSS media type.
@@ -271,6 +282,7 @@ url-incdec-segments = path,query
 #     * `{id}`: The internal window ID of this window.
 #     * `{scroll_pos}`: The page scroll position.
 #     * `{host}`: The host of the current web page.
+#     * `{backend}`: Either 'webkit' or 'webengine'
 #     Default: {perc}{title}{title_sep}qutebrowser
 #
 # modal-js-dialog (Bool):
@@ -288,6 +300,10 @@ url-incdec-segments = path,query
 #     Globs are supported, so ';*' will blacklist all keychainsstarting
 #     with ';'. Use '*' to disable keyhints
 #     Default:
+#
+# prompt-radius (Int):
+#     The rounding radius for the edges of prompts.
+#     Default: 8
 zoom-levels = 25%,33%,50%,67%,75%,90%,100%,110%,125%,150%,175%,200%,250%,300%,400%,500%
 default-zoom = 100%
 downloads-position = top
@@ -297,7 +313,8 @@ message-unfocused = false
 confirm-quit = multiple-tabs,downloads
 zoom-text-only = false
 frame-flattening = false
-user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
+user-stylesheet = 
+hide-scrollbar = true
 css-media-type = 
 smooth-scrolling = false
 remove-finished-downloads = -1
@@ -307,6 +324,7 @@ window-title-format = {perc}{title}
 modal-js-dialog = false
 hide-wayland-decoration = false
 keyhint-blacklist = 
+prompt-radius = 8
 
 [network]
 # Settings related to the network.
@@ -359,6 +377,11 @@ keyhint-blacklist =
 # custom-headers (HeaderDict):
 #     Set custom headers for qutebrowser HTTP requests.
 #     Default:
+#
+# netrc-file (File):
+#     Set location of a netrc-file for HTTP authentication. If empty,
+#     ~/.netrc is used.
+#     Default:
 do-not-track = true
 accept-language = en-US,en
 referer-header = same-domain
@@ -368,14 +391,17 @@ proxy-dns-requests = true
 ssl-strict = ask
 dns-prefetch = true
 custom-headers = 
+netrc-file = 
 
 [completion]
 # Options related to completion and command history.
 #
-# auto-open (Bool):
-#     Automatically open completion when typing.
-#     Valid values: true, false
-#     Default: true
+# show (String):
+#     When to show the autocompletion window.
+#         always: Whenever a completion is available.
+#         auto: Whenever a completion is requested.
+#         never: Never.
+#     Default: always
 #
 # download-path-suggestion (String):
 #     What to display in the download filename input.
@@ -387,11 +413,6 @@ custom-headers =
 # timestamp-format (TimestampTemplate):
 #     How to format timestamps (e.g. for history)
 #     Default: %Y-%m-%d
-#
-# show (Bool):
-#     Whether to show the autocompletion window.
-#     Valid values: true, false
-#     Default: true
 #
 # height (PercOrInt):
 #     The height of the completion, in px or as percentage of the
@@ -427,10 +448,9 @@ custom-headers =
 # scrollbar-padding (Int):
 #     Padding of scrollbar handle in completion window (in px).
 #     Default: 2
-auto-open = true
+show = always
 download-path-suggestion = both
 timestamp-format = %Y-%m-%d
-show = true
 height = 50%
 cmd-history-max-items = 100
 web-history-max-items = 1000
@@ -525,25 +545,27 @@ mouse-zoom-divider = 512
 #
 # select-on-remove (SelectOnRemove):
 #     Which tab to select when the focused tab is removed.
-#         left: Select the tab on the left.
-#         right: Select the tab on the right.
-#         previous: Select the previously selected tab.
-#     Default: right
+#         prev: Select the tab which came before the closed one (left in
+#     horizontal, above in vertical).
+#         next: Select the tab which came after the closed one (right in
+#     horizontal, below in vertical).
+#         last-used: Select the previously selected tab.
+#     Default: next
 #
 # new-tab-position (NewTabPosition):
 #     How new tabs are positioned.
-#         left: On the left of the current tab.
-#         right: On the right of the current tab.
-#         first: At the left end.
-#         last: At the right end.
-#     Default: right
+#         prev: Before the current tab.
+#         next: After the current tab.
+#         first: At the beginning.
+#         last: At the end.
+#     Default: next
 #
 # new-tab-position-explicit (NewTabPosition):
 #     How new tabs opened explicitly are positioned.
-#         left: On the left of the current tab.
-#         right: On the right of the current tab.
-#         first: At the left end.
-#         last: At the right end.
+#         prev: Before the current tab.
+#         next: After the current tab.
+#         first: At the beginning.
+#         last: At the end.
 #     Default: last
 #
 # last-close (String):
@@ -621,6 +643,7 @@ mouse-zoom-divider = 512
 #     * `{id}`: The internal tab ID of this tab.
 #     * `{scroll_pos}`: The page scroll position.
 #     * `{host}`: The host of the current web page.
+#     * `{backend}`: Either 'webkit' or 'webengine'
 #     Default: {index}: {title}
 #
 # title-alignment (TextAlignment):
@@ -641,8 +664,8 @@ mouse-zoom-divider = 512
 #     Padding for indicators (top, bottom, left, right).
 #     Default: 2,2,0,4
 background-tabs = false
-select-on-remove = right
-new-tab-position = right
+select-on-remove = next
+new-tab-position = next
 new-tab-position-explicit = last
 last-close = ignore
 show = multiple
@@ -793,8 +816,14 @@ cache-size = 52428800
 #     Valid values: true, false, ask
 #     Default: ask
 #
-# javascript-can-open-windows (Bool):
-#     Whether JavaScript programs can open new windows.
+# media-capture (BoolAsk):
+#     Allow websites to record audio/video.
+#     Valid values: true, false, ask
+#     Default: ask
+#
+# javascript-can-open-windows-automatically (Bool):
+#     Whether JavaScript programs can open new windows without user
+#     interaction.
 #     Valid values: true, false
 #     Default: false
 #
@@ -852,7 +881,7 @@ cache-size = 52428800
 #     - A zip-file of any of the above, with either only one file, or a
 #     file named 'hosts' (with any extension).
 #     Default:
-#     http://www.malwaredomainlist.com/hostslist/hosts.txt,http://someonewhocares.org/hosts/hosts,http://winhelp2002.mvps.org/hosts.zip,http://malwaredomains.lehigh.edu/files/justdomains.zip,http://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&mimetype=plaintext
+#     https://www.malwaredomainlist.com/hostslist/hosts.txt,http://someonewhocares.org/hosts/hosts,http://winhelp2002.mvps.org/hosts.zip,http://malwaredomains.lehigh.edu/files/justdomains.zip,https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&mimetype=plaintext
 #
 # host-blocking-enabled (Bool):
 #     Whether host blocking is enabled.
@@ -881,7 +910,8 @@ css-regions = true
 hyperlink-auditing = false
 geolocation = ask
 notifications = ask
-javascript-can-open-windows = false
+media-capture = ask
+javascript-can-open-windows-automatically = false
 javascript-can-close-windows = false
 javascript-can-access-clipboard = false
 ignore-javascript-prompt = false
@@ -1001,7 +1031,7 @@ ddg = https://duckduckgo.com/?q={}
 # Aliases for commands.
 # By default, no aliases are defined. Example which adds a new command
 # `:qtb` to open qutebrowsers website:
-# `qtb = open http://www.qutebrowser.org/`
+# `qtb = open https://www.qutebrowser.org/`
 r = restart
 h = help
 
@@ -1084,30 +1114,6 @@ h = help
 # statusbar.bg (QssColor):
 #     Background color of the statusbar.
 #     Default: black
-#
-# statusbar.fg.error (QssColor):
-#     Foreground color of the statusbar if there was an error.
-#     Default: ${statusbar.fg}
-#
-# statusbar.bg.error (QssColor):
-#     Background color of the statusbar if there was an error.
-#     Default: red
-#
-# statusbar.fg.warning (QssColor):
-#     Foreground color of the statusbar if there is a warning.
-#     Default: ${statusbar.fg}
-#
-# statusbar.bg.warning (QssColor):
-#     Background color of the statusbar if there is a warning.
-#     Default: darkorange
-#
-# statusbar.fg.prompt (QssColor):
-#     Foreground color of the statusbar if there is a prompt.
-#     Default: ${statusbar.fg}
-#
-# statusbar.bg.prompt (QssColor):
-#     Background color of the statusbar if there is a prompt.
-#     Default: darkblue
 #
 # statusbar.fg.insert (QssColor):
 #     Foreground color of the statusbar in insert mode.
@@ -1302,6 +1308,54 @@ h = help
 # keyhint.bg (QssColor):
 #     Background color of the keyhint widget.
 #     Default: rgba(0, 0, 0, 80%)
+#
+# messages.fg.error (QssColor):
+#     Foreground color of an error message.
+#     Default: white
+#
+# messages.bg.error (QssColor):
+#     Background color of an error message.
+#     Default: red
+#
+# messages.border.error (QssColor):
+#     Border color of an error message.
+#     Default: #bb0000
+#
+# messages.fg.warning (QssColor):
+#     Foreground color a warning message.
+#     Default: white
+#
+# messages.bg.warning (QssColor):
+#     Background color of a warning message.
+#     Default: darkorange
+#
+# messages.border.warning (QssColor):
+#     Border color of an error message.
+#     Default: #d47300
+#
+# messages.fg.info (QssColor):
+#     Foreground color an info message.
+#     Default: white
+#
+# messages.bg.info (QssColor):
+#     Background color of an info message.
+#     Default: black
+#
+# messages.border.info (QssColor):
+#     Border color of an info message.
+#     Default: #333333
+#
+# prompts.fg (QssColor):
+#     Foreground color for prompts.
+#     Default: white
+#
+# prompts.bg (QssColor):
+#     Background color for prompts.
+#     Default: darkblue
+#
+# prompts.selected.bg (QssColor):
+#     Background color for the selected item in filename prompts.
+#     Default: #308cc6
 completion.fg = #a89984
 completion.bg = #1d2021
 completion.alternate-bg = #32302f
@@ -1318,12 +1372,6 @@ completion.scrollbar.fg = ${completion.fg}
 completion.scrollbar.bg = ${completion.bg}
 statusbar.fg = #ebdbb2
 statusbar.bg = #1d2021
-statusbar.fg.error = ${statusbar.fg}
-statusbar.bg.error = #fb4934
-statusbar.fg.warning = ${statusbar.fg}
-statusbar.bg.warning = #d79921
-statusbar.fg.prompt = ${statusbar.fg}
-statusbar.bg.prompt = #458588
 statusbar.fg.insert = ${statusbar.fg}
 statusbar.bg.insert = #98971a
 statusbar.fg.command = ${statusbar.fg}
@@ -1368,6 +1416,18 @@ webpage.bg = white
 keyhint.fg = #FFFFFF
 keyhint.fg.suffix = #FFFF00
 keyhint.bg = rgba(0, 0, 0, 80%)
+messages.fg.error = ${statusbar.fg}
+messages.bg.error = red
+messages.border.error = #bb0000
+messages.fg.warning = ${statusbar.fg}
+messages.bg.warning = darkorange
+messages.border.warning = #d47300
+messages.fg.info = white
+messages.bg.info = black
+messages.border.info = #333333
+prompts.fg = ${statusbar.fg}
+prompts.bg = #458588
+prompts.selected.bg = #308cc6
 
 [fonts]
 # Fonts used for the UI, with optional style/weight/size.
@@ -1452,6 +1512,22 @@ keyhint.bg = rgba(0, 0, 0, 80%)
 # keyhint (Font):
 #     Font used in the keyhint widget.
 #     Default: 8pt ${_monospace}
+#
+# messages.error (Font):
+#     Font used for error messages.
+#     Default: 8pt ${_monospace}
+#
+# messages.warning (Font):
+#     Font used for warning messages.
+#     Default: 8pt ${_monospace}
+#
+# messages.info (Font):
+#     Font used for info messages.
+#     Default: 8pt ${_monospace}
+#
+# prompts (Font):
+#     Font used for prompts.
+#     Default: 8pt sans-serif
 _monospace = Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
 completion = 10pt ${_monospace}
 completion.category = bold ${completion}
@@ -1471,3 +1547,7 @@ web-size-minimum-logical =
 web-size-default = 
 web-size-default-fixed = 
 keyhint = 10pt ${_monospace}
+messages.error = 10pt ${_monospace}
+messages.warning = 10pt ${_monospace}
+messages.info = 10pt ${_monospace}
+prompts = 8pt sans-serif
