--- a/qutebrowser/keys.conf
+++ b/qutebrowser/keys.conf
@@ -27,8 +27,7 @@
 #
 # For simple keys (no `<>`-signs), a capital letter means the key is pressed
 # with Shift. For special keys (with `<>`-signs), you need to explicitly add
-# `Shift-` to match a key pressed with shift.  You can bind multiple commands
-# by separating them with `;;`.
+# `Shift-` to match a key pressed with shift.
 #
 # Note that default keybindings are always bound, and need to be explicitly
 # unbound if you wish to remove them:
@@ -295,7 +294,7 @@ set-cmd-text -s :set
 set-cmd-text -s :set -t
     sl
 
-set-cmd-text -s :set keybind
+set-cmd-text -s :bind
     sk
 
 zoom-out
@@ -429,9 +428,6 @@ follow-selected -t
 spawn --detach mpv {url}
     x
 
-hint links spawn mpv {hint-url}
-    ;x
-
 set ui hide-statusbar!
     gb
 
@@ -508,6 +504,12 @@ repeat-command
 
 spawn --detach gvim {url}
     gF
+
+run-macro
+    @
+
+hint --add-history links spawn mpv {hint-url}
+    ;x
 
 [insert]
 # Keybindings for insert mode.
@@ -595,8 +597,8 @@ completion-item-focus prev-category
 # bind special keys.
 # Useful hidden commands to map in this section:
 #  * `prompt-accept`: Confirm the entered value.
-#  * `prompt-yes`: Answer yes to a yes/no question.
-#  * `prompt-no`: Answer no to a yes/no question.
+#  * `prompt-accept yes`: Answer yes to a yes/no question.
+#  * `prompt-accept no`: Answer no to a yes/no question.
 
 prompt-accept
     <return>
@@ -606,14 +608,22 @@ prompt-accept
     <enter>
     <shift-enter>
 
-prompt-yes
+prompt-accept yes
     y
 
-prompt-no
+prompt-accept no
     n
 
 prompt-open-download
     <ctrl-x>
+
+prompt-item-focus prev
+    <shift-tab>
+    <up>
+
+prompt-item-focus next
+    <tab>
+    <down>
 
 [command,prompt]
 
