--- a/mutt/gpg.rc
+++ b/mutt/gpg.rc
@@ -6,6 +6,7 @@
 #  GPG
 # =====
 
+set pgp_use_gpg_agent = yes                 # let gpg-agent take care of already supplied passphrases
 set pgp_timeout = 3600                      # how long to cache passphrase (in secs)
 set crypt_autosign = no                     # automatically sign all outgoing mail?
 set crypt_replyencrypt = yes                # automatically encrypt replies to encrypted messages?
