add UWO (+ DOI) search

--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -1026,6 +1026,7 @@ hide-unmatched-rapid-hints = true
 # signs.
 DEFAULT = ${ddg}
 ddg = https://duckduckgo.com/?q={}
+uwo = http://dx.doi.org.proxy1.lib.uwo.ca/{}
 
 [aliases]
 # Aliases for commands.
