--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -808,7 +808,7 @@ cache-size = 52428800
 #     Enables or disables WebGL. For QtWebEngine, Qt/PyQt >= 5.7 is
 #     required for this setting.
 #     Valid values: true, false
-#     Default: false
+#     Default: true
 #
 # css-regions (Bool):
 #     Enable or disable support for CSS regions.
