set smooth-scrolling true

--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -331,7 +331,7 @@ frame-flattening = false
 user-stylesheet = 
 hide-scrollbar = true
 css-media-type = 
-smooth-scrolling = false
+smooth-scrolling = true
 remove-finished-downloads = -1
 hide-statusbar = false
 statusbar-padding = 4,4,0,0
