Revert "set smooth-scrolling true"
This reverts commit 86891865c5827dcc8ac67239f2a06bd431d0ba78.

--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -331,7 +331,7 @@ frame-flattening = false
 user-stylesheet = 
 hide-scrollbar = true
 css-media-type = 
-smooth-scrolling = true
+smooth-scrolling = false
 remove-finished-downloads = -1
 hide-statusbar = false
 statusbar-padding = 4,4,0,0
