add keybinding to execute userscrpt ddg-to-google.sh

--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -511,6 +511,9 @@ run-macro
 hint --add-history links spawn mpv {hint-url}
     ;x
 
+spawn --userscript ddg-to-google.sh
+    gG
+
 [insert]
 # Keybindings for insert mode.
 # Since normal keypresses are passed through, only special keys are
