--- a/.config/qutebrowser/qutebrowser.conf
+++ b/.config/qutebrowser/qutebrowser.conf
@@ -1046,7 +1046,7 @@ hide-unmatched-rapid-hints = true
 # replaced by the search term, use `{{` and `}}` for literal `{`/`}`
 # signs.
 DEFAULT = ${ddg}
-bbs = https://encrypted.google.com/search?hl=en&q={} site:bbs.archlinux.org
+bbs = ${ddg} site:bbs.archlinux.org
 ddg = https://duckduckgo.com/?q={}
 uwo = http://dx.doi.org.proxy1.lib.uwo.ca/{}
 
