--- a/.xmobarrc
+++ b/.xmobarrc
@@ -8,6 +8,9 @@ Config { font = "xft:Fira Mono:pixelsize=12"
        , commands = [ Run Wireless "wlp3s0" [ "-t", "<essid> <quality>", "-L", "50", "-H", "80"
                                             , "--normal", "#fabd2f", "--high", "#b8bb26", "--low", "#83a598"
                                             ] 10
+                    , Run DynNetwork [ "-t", "<rx>|<tx>", "-S", "true", "-L", "1000", "-H", "5000"
+                                     , "--low", "#b8bb26", "--normal", "#fabd2f", "--high", "#fb4934"
+                                     ] 10
                     , Run Weather "CYXU" [ "-t", "<tempF> F", "-L", "40", "-H", "80"
                                          , "--normal", "#fabd2f", "--high", "#fb4934", "--low", "#83a598"
                                          ] 300
@@ -23,5 +26,5 @@ Config { font = "xft:Fira Mono:pixelsize=12"
                     ]
        , sepChar  = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %wlp3s0wi%  %kbd%  %CYXU%  %battery% <fc=#8ec07c>%updates%</fc> <fc=#d79921>%date%</fc> "
+       , template = "%StdinReader% }{ %wlp3s0wi%  %dynnetwork% %kbd%  %CYXU%  %battery% <fc=#8ec07c>%updates%</fc> <fc=#d79921>%date%</fc> "
        }
