--- a/.xmobarrc
+++ b/.xmobarrc
@@ -21,10 +21,9 @@ Config { font = "xft:Fira Mono:pixelsize=12"
                                   ] 10
                     , Run Kbd [("us(dvp)", "dvp")]
                     , Run Date "%a %d %b %H:%M:%S" "date" 10
-                    , Run Com "/home/brian/repos/scripts/update-notify.sh" [] "updates" 36000
                     , Run StdinReader
                     ]
        , sepChar  = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %wlp3s0wi%  %dynnetwork%  %kbd%  %CYXU%  %battery%  <fc=#8ec07c>%updates%</fc>  <fc=#d79921>%date%</fc> "
+       , template = "%StdinReader% }{ %wlp3s0wi%  %dynnetwork%  %kbd%  %CYXU%  %battery%  <fc=#d79921>%date%</fc> "
        }
