bind gf: replace native 'view-source' with userscript that calls vim

--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -342,9 +342,6 @@ download-cancel
 download-clear
     gdc
 
-view-source
-    gf
-
 tab-focus last
     <ctrl-tab>
     <backspace>
@@ -513,6 +510,9 @@ hint --add-history links spawn mpv {hint-url}
 
 spawn --userscript ddg-to-google.sh
     gG
+
+spawn --userscript view-source.sh
+    gf
 
 [insert]
 # Keybindings for insert mode.
