--- a/.config/qutebrowser/qutebrowser.conf
+++ b/.config/qutebrowser/qutebrowser.conf
@@ -181,7 +181,7 @@ default-page = ${startpage}
 auto-search = naive
 auto-save-config = true
 auto-save-interval = 15000
-editor = gvim -f "{}"
+editor = urxvt -e vim "{}"
 editor-encoding = utf-8
 private-browsing = false
 developer-extras = false
