<space> and <shift-space>: scroll down/up only 0.9 of a page

--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -514,6 +514,12 @@ spawn --userscript ddg-to-google.sh
 spawn --userscript view-source.sh
     gf
 
+scroll-page 0 0.9
+    <space>
+
+scroll-page 0 -0.9
+    <shift-space>
+
 [insert]
 # Keybindings for insert mode.
 # Since normal keypresses are passed through, only special keys are
