change promp.bg color to my dark red

--- a/.config/qutebrowser/qutebrowser.conf
+++ b/.config/qutebrowser/qutebrowser.conf
@@ -1450,7 +1450,7 @@ messages.fg.info = white
 messages.bg.info = black
 messages.border.info = #333333
 prompts.fg = ${statusbar.fg}
-prompts.bg = #458588
+prompts.bg = #cc241d
 prompts.selected.bg = #308cc6
 
 [fonts]
