remove '.sh' suffix from userscripts

--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -508,10 +508,10 @@ run-macro
 hint --add-history links spawn mpv {hint-url}
     ;x
 
-spawn --userscript ddg-to-google.sh
+spawn --userscript ddg-to-google
     gG
 
-spawn --userscript view-source.sh
+spawn --userscript view-source
     gf
 
 scroll-page 0 0.9
