add new userscript 'youtube-to-youpak' and bind it to 'X'

--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -520,6 +520,9 @@ scroll-page 0 0.9
 scroll-page 0 -0.9
     <shift-space>
 
+spawn --userscript youtube-to-youpak
+    X
+
 [insert]
 # Keybindings for insert mode.
 # Since normal keypresses are passed through, only special keys are
