add userscript 'edit-command' and spawn it with '<ctrl-e>' in command mode

--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -654,7 +654,7 @@ rl-forward-word
 rl-beginning-of-line
     <ctrl-a>
 
-rl-end-of-line
+spawn --userscript edit-command
     <ctrl-e>
 
 rl-unix-line-discard
