let web-family-fixed track '' variable

--- a/.config/qutebrowser/qutebrowser.conf
+++ b/.config/qutebrowser/qutebrowser.conf
@@ -1562,7 +1562,7 @@ downloads = 10pt ${_monospace}
 hints = bold 13px ${web-family-fixed}
 debug-console = 10pt ${_monospace}
 web-family-standard = 
-web-family-fixed = DejaVu Sans Mono
+web-family-fixed = ${_monospace}
 web-family-serif = DejaVu Serif
 web-family-sans-serif = DejaVu Sans
 web-family-cursive = 
