change web-family-sans-serif to Fira Sans

--- a/.config/qutebrowser/qutebrowser.conf
+++ b/.config/qutebrowser/qutebrowser.conf
@@ -1564,7 +1564,7 @@ debug-console = 10pt ${_monospace}
 web-family-standard = 
 web-family-fixed = ${_monospace}
 web-family-serif = DejaVu Serif
-web-family-sans-serif = DejaVu Sans
+web-family-sans-serif = Fira Sans
 web-family-cursive = 
 web-family-fantasy = 
 web-size-minimum = 
