--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -602,6 +602,9 @@ completion-item-focus next-category
 completion-item-focus prev-category
     <ctrl-shift-tab>
 
+spawn --userscript edit-command
+    <ctrl-e>
+
 [prompt]
 # Keybindings for prompts in the status line.
 # You can bind normal keys in this mode, but they will be only active
@@ -654,7 +657,7 @@ rl-forward-word
 rl-beginning-of-line
     <ctrl-a>
 
-spawn --userscript edit-command
+<unbound>
     <ctrl-e>
 
 rl-unix-line-discard
