--- a/.config/qutebrowser/qutebrowser.conf
+++ b/.config/qutebrowser/qutebrowser.conf
@@ -263,7 +263,8 @@ url-incdec-segments = path,query
 #     Default:
 #
 # smooth-scrolling (Bool):
-#     Whether to enable smooth scrolling for webpages.
+#     Whether to enable smooth scrolling for web pages. Note smooth
+#     scrolling does not work with the :scroll-px command.
 #     Valid values: true, false
 #     Default: false
 #
