change statusbar, etc. backgrounds to pure black

--- a/.config/qutebrowser/qutebrowser.conf
+++ b/.config/qutebrowser/qutebrowser.conf
@@ -1383,13 +1383,13 @@ h = help
 #     Background color for the selected item in filename prompts.
 #     Default: #308cc6
 completion.fg = #a89984
-completion.bg = #1d2021
-completion.alternate-bg = #32302f
+completion.bg = black
+completion.alternate-bg = #222222
 completion.category.fg = #ebdbb2
 completion.category.bg = qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 #888888, stop:1 #505050)
-completion.category.border.top = #1d2021
+completion.category.border.top = black
 completion.category.border.bottom = ${completion.category.border.top}
-completion.item.selected.fg = #1d2021
+completion.item.selected.fg = black
 completion.item.selected.bg = #fabd2f
 completion.item.selected.border.top = ${completion.item.selected.bg}
 completion.item.selected.border.bottom = ${completion.item.selected.border.top}
@@ -1397,7 +1397,7 @@ completion.match.fg = #fb4934
 completion.scrollbar.fg = ${completion.fg}
 completion.scrollbar.bg = ${completion.bg}
 statusbar.fg = #ebdbb2
-statusbar.bg = #1d2021
+statusbar.bg = black
 statusbar.fg.insert = ${statusbar.fg}
 statusbar.bg.insert = #98971a
 statusbar.fg.command = ${statusbar.fg}
@@ -1414,7 +1414,7 @@ statusbar.url.fg.error = #d79921
 statusbar.url.fg.warn = #fabd2f
 statusbar.url.fg.hover = lightcoral
 tabs.fg.odd = #a89984
-tabs.bg.odd = #1d2021
+tabs.bg.odd = black
 tabs.fg.even = ${tabs.fg.odd}
 tabs.bg.even = ${tabs.bg.odd}
 tabs.fg.selected.odd = #ebdbb2
@@ -1426,10 +1426,10 @@ tabs.indicator.start = #0000aa
 tabs.indicator.stop = #00aa00
 tabs.indicator.error = #ff0000
 tabs.indicator.system = rgb
-hints.fg = #1d2021
+hints.fg = black
 hints.bg = qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgba(255, 247, 133, 0.8), stop:1 rgba(255, 197, 66, 0.8))
 hints.fg.match = #b8bb26
-downloads.bg.bar = #1d2021
+downloads.bg.bar = black
 downloads.fg.start = #ebdbb2
 downloads.bg.start = #0000aa
 downloads.fg.stop = ${downloads.fg.start}
