--- a/.config/newsbeuter/config
+++ b/.config/newsbeuter/config
@@ -21,6 +21,8 @@ highlight article "^Date:"   red     default bold
 
 highlight articlelist "semantics?" red default bold
 highlight articlelist "(t|T)420"   red default bold
+highlight all "(https?|ftp)://[\-\.,/%~_:?&=\#a-zA-Z0-9]+" blue default bold
+highlight all "[\-\.+_a-zA-Z0-9]+@[\-\.a-zA-Z0-9]+" red default bold
 
 # my title formats
 feedlist-title-format       "Feedlist (%u unread, %t total)%?T? - tag `%T'&?"
