Add new userscript 'echo-url' and bind to ';?' in hint mode

--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -523,6 +523,9 @@ scroll-page 0 -0.9
 spawn --userscript youtube-to-youpak
     X
 
+hint links userscript echo-url
+    ;?
+
 [insert]
 # Keybindings for insert mode.
 # Since normal keypresses are passed through, only special keys are
