Add new userscript 'open-doi' and bind to ';u' in command mode to open selected DOI text

--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -526,6 +526,9 @@ spawn --userscript youtube-to-youpak
 hint links userscript echo-url
     ;?
 
+spawn --userscript open-doi
+    ;u
+
 [insert]
 # Keybindings for insert mode.
 # Since normal keypresses are passed through, only special keys are
