Update qutebrowser: adds new command <tab-pin>, bound to <ctrl-p>

--- a/.config/qutebrowser/keys.conf
+++ b/.config/qutebrowser/keys.conf
@@ -529,6 +529,9 @@ hint links userscript echo-url
 spawn --userscript open-doi
     ;u
 
+tab-pin
+    <ctrl-p>
+
 [insert]
 # Keybindings for insert mode.
 # Since normal keypresses are passed through, only special keys are
