--- a/.config/qutebrowser/qutebrowser.conf
+++ b/.config/qutebrowser/qutebrowser.conf
@@ -715,7 +715,7 @@ title-format = {title}
 #     The format to use for the tab title for pinned tabs. The same
 #     placeholders like for title-format are defined.
 #     Default: {index}
-title-format-pinned = {index}
+title-format-pinned = {title}
 
 # title-alignment (TextAlignment):
 #     Alignment of the text inside of tabs
