--- a/.config/qutebrowser/qutebrowser.conf
+++ b/.config/qutebrowser/qutebrowser.conf
@@ -129,18 +129,11 @@ print-element-backgrounds = true
 #     Default: false
 xss-auditing = false
 
-# site-specific-quirks (Bool):
-#     Enable QtWebKit workarounds for broken sites.
-#     Valid values: true, false
-#     Default: true
-site-specific-quirks = true
-
 # default-encoding (String):
 #     Default encoding to use for websites.
 #     The encoding must be a string describing an encoding such as
-#     _utf-8_, _iso-8859-1_, etc. If left empty a default value will be
-#     used.
-#     Default:
+#     _utf-8_, _iso-8859-1_, etc.
+#     Default: iso-8859-1
 default-encoding = UTF-8
 
 # new-instance-open-target (String):
@@ -279,11 +272,6 @@ user-stylesheet =
 #     Default: true
 hide-scrollbar = true
 
-# css-media-type (String):
-#     Set the CSS media type.
-#     Default:
-css-media-type = 
-
 # smooth-scrolling (Bool):
 #     Whether to enable smooth scrolling for web pages. Note smooth
 #     scrolling does not work with the :scroll-px command.
@@ -320,6 +308,7 @@ statusbar-padding = 4,4,0,0
 #     * `{scroll_pos}`: The page scroll position.
 #     * `{host}`: The host of the current web page.
 #     * `{backend}`: Either 'webkit' or 'webengine'
+#     * `{private}` : Indicates when private mode is enabled.
 #     Default: {perc}{title}{title_sep}qutebrowser
 window-title-format = {perc}{title}
 
@@ -708,6 +697,7 @@ tabs-are-windows = false
 #     * `{scroll_pos}`: The page scroll position.
 #     * `{host}`: The host of the current web page.
 #     * `{backend}`: Either 'webkit' or 'webengine'
+#     * `{private}` : Indicates when private mode is enabled.
 #     Default: {index}: {title}
 title-format = {title}
 
@@ -770,39 +760,10 @@ remember-download-directory = true
 #     resuming up to _n_ pages.
 #     For more information about the feature, please refer to:
 #     http://webkit.org/blog/427/webkit-page-cache-i-the-basics/
-#     Default:
-maximum-pages-in-cache = 
+#     Default: 0
+maximum-pages-in-cache = 0
 
-# object-cache-capacities (List of WebKitBytes):
-#     The capacities for the global memory cache for dead objects such
-#     as stylesheets or scripts. Syntax: cacheMinDeadCapacity,
-#     cacheMaxDead, totalCapacity.
-#     The _cacheMinDeadCapacity_ specifies the minimum number of bytes
-#     that dead objects should consume when the cache is under pressure.
-#     _cacheMaxDead_ is the maximum number of bytes that dead objects
-#     should consume when the cache is *not* under pressure.
-#     _totalCapacity_ specifies the maximum number of bytes that the
-#     cache should consume *overall*.
-#     Default:
-object-cache-capacities = 
-
-# offline-storage-default-quota (WebKitBytes):
-#     Default quota for new offline storage databases.
-#     Default:
-offline-storage-default-quota = 
-
-# offline-web-application-cache-quota (WebKitBytes):
-#     Quota for the offline web application cache.
-#     Default:
-offline-web-application-cache-quota = 
-
-# offline-storage-database (Bool):
-#     Whether support for the HTML 5 offline storage feature is enabled.
-#     Valid values: true, false
-#     Default: true
-offline-storage-database = true
-
-# offline-web-application-storage (Bool):
+# offline-web-application-cache (Bool):
 #     Whether support for the HTML 5 web application cache feature is
 #     enabled.
 #     An application cache acts like an HTTP cache in some sense. For
@@ -813,10 +774,10 @@ offline-storage-database = true
 #     http://dev.w3.org/html5/spec/Overview.html#appcache
 #     Valid values: true, false
 #     Default: true
-offline-web-application-storage = true
+offline-web-application-cache = true
 
 # local-storage (Bool):
-#     Whether support for the HTML 5 local storage feature is enabled.
+#     Whether support for HTML 5 local storage and Web SQL is enabled.
 #     Valid values: true, false
 #     Default: true
 local-storage = true
@@ -855,12 +816,6 @@ allow-plugins = false
 #     Valid values: true, false
 #     Default: true
 webgl = true
-
-# css-regions (Bool):
-#     Enable or disable support for CSS regions.
-#     Valid values: true, false
-#     Default: true
-css-regions = true
 
 # hyperlink-auditing (Bool):
 #     Enable or disable hyperlink auditing (<a ping>).
@@ -1600,23 +1555,23 @@ web-family-fantasy =
 
 # web-size-minimum (Int):
 #     The hard minimum font size.
-#     Default:
-web-size-minimum = 
+#     Default: 0
+web-size-minimum = 0
 
 # web-size-minimum-logical (Int):
 #     The minimum logical font size that is applied when zooming out.
-#     Default:
-web-size-minimum-logical = 
+#     Default: 6
+web-size-minimum-logical = 6
 
 # web-size-default (Int):
 #     The default font size for regular text.
-#     Default:
-web-size-default = 
+#     Default: 16
+web-size-default = 16
 
 # web-size-default-fixed (Int):
 #     The default font size for fixed-pitch text.
-#     Default:
-web-size-default-fixed = 
+#     Default: 13
+web-size-default-fixed = 13
 
 # keyhint (Font):
 #     Font used in the keyhint widget.
