Copy to clipboard (not just primary) when selecting with mouse

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,7 @@ set -g renumber-windows on
 set -g mouse on
 
 # Mouse selection with X clipboard integration.
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "xsel -i -p"
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "xsel -i -p && xsel -o -p | xsel -i -b"
 
 # Look and feel
 
